# $Id: Changes,v 1.55 2003/08/17 04:44:51 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.59
	[FIXES]
	* Squelched a warning in follow() where it tries to do a regex
	  match against an undef value.

	[ENHANCEMENTS]
	* Added the mech-dump script, which replaces mech-forms.

0.58	August 14, 2003  11:30pm
	[THINGS THAT MIGHT BREAK YOUR CODE]
	* $mech->uri() now returns a plain string, not a URI object.
	  The automatic stringification of the URI object was
	  causing problems on Win32 and/or threaded Perls, and I
	  didn't feel like figuring out why.  If the non-objectness
	  of the uri() method is a problem, let me know.
	* form(), form_name() and form_number() now return the
	  HTML::Form object of the form that was chosen.  They used
	  to return a 1 or 0.  This means that if you're explicitly
	  checking for 1 or 0, instead of evaluating the return
	  code in a boolean context, your code will break.

	[FIXES]
	* The <AREA>-handling in extract_links() was incorrectly
	  building the text.
	* uri() now returns a string, not a URI object.
	* form(), form_name() and form_number() now return the
	  HTML::Form object of the form that was chosen.

	[INTERNALS]
	* Determination of live vs. local tests is now done in
	  Makefile.PL, and we don't have to set those silly semaphore
	  files any more.
	* Made other cleanups in Makefile.PL, like using
	  ExtUtils::Command instead of rolling my own touch().
	* Moved all the *-live.t tests into t/live/*.t, and renamed
	  the *-local.t files to not be -local.
	* Added more tests for <AREA> tags.

0.57	July 31, 2003  11:21pm
	[ENHANCEMENTS]
	* Added <AREA HREF=...> tags to those that are links per
	  find_links().

0.56    July 24, 2003  12:15pm
	[THINGS THAT MIGHT BREAK YOUR CODE]
	* Created agent_alias() method to do the browser string
	  translation.	Passing "Windows IE 6" to agent() will get
	  you back exactly that string as the agent.  You have to call