@@ -1,6 +1,6 @@
 use warnings;
 use strict;
-use Test::More tests => 9;
+use Test::More tests => 10;
 
 use lib 't/lib';
 use Test::HTTP::LocalServer;
@@ -13,7 +13,8 @@ BEGIN {
 my $t = WWW::Mechanize->new;
 isa_ok( $t, 'WWW::Mechanize', 'Created object' );
 
-ok( $t->get($server->url)->is_success, "Got Google" );
+is(scalar @{$t->{page_stack}}, 0, "Page stack starts empty");
+ok( $t->get($server->url)->is_success, "Got start page" );
 is(scalar @{$t->{page_stack}}, 0, "Page stack starts empty");
 $t->_push_page_stack();
 is(scalar @{$t->{page_stack}}, 1, "Pushed item onto page stack");
