@@ -1,10 +1,13 @@
-# $Id: Changes,v 1.55 2003/08/17 04:44:51 petdance Exp $
+# $Id: Changes,v 1.56 2003/09/04 04:51:14 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.59
 	[FIXES]
 	* Squelched a warning in follow() where it tries to do a regex
 	  match against an undef value.
+	* The page stack functionality, including the back() button,
+	  was entirely broken.  Now it works.  Thanks to the mighty
+	  Iain Truskett for help.
 
 	[ENHANCEMENTS]
 	* Added the mech-dump script, which replaces mech-forms.
